--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>林奇葦</title>
-    <meta name="description" content="https://7wei.xyz" />
+    <meta
+      name="description"
+      content="我希望從現在開始累積不同領域的經驗，想成為更有溫度的人(๑´ڡ`๑)"
+    />
     <meta name="author" content="林奇葦" />
 
     <!-- Mobile Specific Metas
@@ -108,32 +111,18 @@
 
         -->
 
-          <!-- Generic Email -->
+          <!-- Generic Homepage -->
           <a
             class="button button-default"
-            href="mailto:kiwi072400.lin@gmail.com"
+            href="https://7wei.xyz/home"
             target="_blank"
             rel="noopener"
             role="button"
             ><img
               class="icon"
-              src="images/icons/generic-email.svg"
+              src="images/icons/generic-homepage.svg"
               alt=""
-            />kiwi072400.lin@gmail.com</a
-          ><br />
-
-          <!-- Discord -->
-          <a
-            class="button button-discord"
-            href="https://7wei.xyz/dc"
-            target="_blank"
-            rel="noopener"
-            role="button"
-            ><img
-              class="icon"
-              src="images/icons/discord.svg"
-              alt=""
-            />Discord</a
+            />Homepage</a
           ><br />
 
           <!-- Facebook -->
@@ -150,16 +139,6 @@
             />Facebook</a
           ><br />
 
-          <!-- GitHub -->
-          <a
-            class="button button-github"
-            href="https://7wei.xyz/gh"
-            target="_blank"
-            rel="noopener"
-            role="button"
-            ><img class="icon" src="images/icons/github.svg" alt="" />GitHub</a
-          ><br />
-
           <!-- Instagram -->
           <a
             class="button button-instagram"
@@ -172,16 +151,6 @@
               src="images/icons/instagram.svg"
               alt=""
             />Instagram</a
-          ><br />
-
-          <!-- Line -->
-          <a
-            class="button button-line"
-            href="https://7wei.xyz/line"
-            target="_blank"
-            rel="noopener"
-            role="button"
-            ><img class="icon" src="images/icons/line.svg" alt="" />Line</a
           ><br />
 
           <!-- LinkedIn -->
@@ -198,14 +167,14 @@
             />LinkedIn</a
           ><br />
 
-          <!-- Steam -->
+          <!-- Line -->
           <a
-            class="button button-steam"
-            href="https://7wei.xyz/steam"
+            class="button button-line"
+            href="https://7wei.xyz/line"
             target="_blank"
             rel="noopener"
             role="button"
-            ><img class="icon" src="images/icons/steam.svg" alt="" />Steam</a
+            ><img class="icon" src="images/icons/line.svg" alt="" />Line</a
           ><br />
 
           <!-- Telegram -->
@@ -222,18 +191,52 @@
             />Telegram</a
           ><br />
 
-          <!-- Generic Homepage -->
+          <!-- Discord -->
           <a
-            class="button button-default"
-            href="https://7wei.xyz/home"
+            class="button button-discord"
+            href="https://7wei.xyz/dc"
             target="_blank"
             rel="noopener"
             role="button"
             ><img
               class="icon"
-              src="images/icons/generic-homepage.svg"
+              src="images/icons/discord.svg"
               alt=""
-            />Visit Homepage</a
+            />Discord</a
+          ><br />
+
+          <!-- Steam -->
+          <a
+            class="button button-steam"
+            href="https://7wei.xyz/steam"
+            target="_blank"
+            rel="noopener"
+            role="button"
+            ><img class="icon" src="images/icons/steam.svg" alt="" />Steam</a
+          ><br />
+
+          <!-- GitHub -->
+          <a
+            class="button button-github"
+            href="https://7wei.xyz/gh"
+            target="_blank"
+            rel="noopener"
+            role="button"
+            ><img class="icon" src="images/icons/github.svg" alt="" />GitHub</a
+          ><br />
+
+          <!-- Generic Email -->
+          <a
+            class="button button-default"
+            href="mailto:kiwi072400.lin@gmail.com"
+            target="_blank"
+            rel="noopener"
+            role="button"
+            ><img
+              class="icon"
+              src="images/icons/generic-email.svg"
+              alt=""
+            />kiwi072400.lin@gmail.com</a
           ><br />
 
           <br />
