--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             Auto:   css/skeleton-auto.css
             Light:  css/skeleton-light.css
             Dark:   css/skeleton-dark.css
-     -->
-    <link rel="stylesheet" href="css/skeleton-auto.css" />
+    -->
+    <link rel="stylesheet" href="css/skeleton-light.css" />
 
     <!-- Brand Styles -->
     <link rel="stylesheet" href="css/brands.css" />
@@ -71,7 +71,7 @@
 
           <!-- Short Bio -->
           <p>
-            想成為擁有
+            總是想成為擁有
             <a
               href="https://tsais.pw/"
               target="_blank"
