--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <!-- Instagram -->
           <a
             class="button button-instagram"
-            href="#"
+            href="https://7wei.xyz/ig"
             target="_blank"
             rel="noopener"
             role="button"
