--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       content="這裡有林奇葦的社群媒體帳號、履歷與作品集，我希望從現在開始累積不同領域的經驗，想成為更有溫度的人(๑´ڡ`๑)"
     />
     <meta property="og:type" content="profile" />
-    <meta property="og:image" content="images/wei/wei.jpeg" />
+    <meta property="og:image" content="images/wei/wei.jpg" />
 
     <!-- Google Analytics
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
