Fix a spell mistake.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- Google Tag Manager
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-    <!-- Backkground Image
+    <!-- Background Image
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <style>
       body {
