Add cv & calendar section

--- a/index.html
+++ b/index.html
@@ -1,106 +1,109 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
-  <head>
-    <!-- Page Information
+    <head>
+        <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <meta charset="utf-8" />
-    <title>林奇葦</title>
-    <meta
-      name="description"
-      content="我希望從現在開始累積不同領域的經驗，想成為更有溫度的人(๑´ڡ`๑)"
-    />
-    <meta name="author" content="林奇葦" />
+        <meta charset="utf-8" />
+        <title>林奇葦</title>
+        <meta
+            name="description"
+            content="我希望從現在開始累積不同領域的經驗，想成為更有溫度的人(๑´ڡ`๑)"
+        />
+        <meta name="author" content="林奇葦" />
 
-    <!-- Mobile Specific Metas
+        <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- CSS
+        <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="stylesheet" href="css/normalize.css" />
+        <link rel="stylesheet" href="css/normalize.css" />
 
-    <!-- Themes:
+        <!-- Themes:
             Auto:   css/skeleton-auto.css
             Light:  css/skeleton-light.css
             Dark:   css/skeleton-dark.css
     -->
-    <link rel="stylesheet" href="css/skeleton-dark.css" />
+        <link rel="stylesheet" href="css/skeleton-dark.css" />
 
-    <!-- Brand Styles -->
-    <link rel="stylesheet" href="css/brands.css" />
+        <!-- Brand Styles -->
+        <link rel="stylesheet" href="css/brands.css" />
 
-    <!-- Favicon
+        <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="icon" type="image/png" href="images/wei/wei.jpg" />
+        <link rel="icon" type="image/png" href="images/wei/wei.jpg" />
 
-    <!-- Open Graph
+        <!-- Open Graph
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <meta property="og:title" content="林奇葦 | Links" />
-    <meta property="og:site_name" content="林奇葦 | Links" />
-    <meta property="og:url" content="https://7wei.xyz/" />
-    <meta
-      property="og:description"
-      content="這裡有林奇葦的社群媒體帳號、履歷與作品集，我希望從現在開始累積不同領域的經驗，想成為更有溫度的人(๑´ڡ`๑)"
-    />
-    <meta property="og:type" content="profile" />
-    <meta property="og:image" content="images/wei/wei.jpg" />
+        <meta property="og:title" content="林奇葦 | Links" />
+        <meta property="og:site_name" content="林奇葦 | Links" />
+        <meta property="og:url" content="https://7wei.xyz/" />
+        <meta
+            property="og:description"
+            content="這裡有林奇葦的社群媒體帳號、履歷與作品集，我希望從現在開始累積不同領域的經驗，想成為更有溫度的人(๑´ڡ`๑)"
+        />
+        <meta property="og:type" content="profile" />
+        <meta property="og:image" content="images/wei/wei.jpg" />
 
-    <!-- Google Analytics
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-3D9PJK2VZ9"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-3D9PJK2VZ9");
-    </script>
-
-    <!-- Google Tag Manager
+        <!-- Google Analytics
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-    <!-- Background Image
+        <!-- Google tag (gtag.js) -->
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=G-3D9PJK2VZ9"
+        ></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+
+            gtag("config", "G-3D9PJK2VZ9");
+        </script>
+
+        <!-- Google Tag Manager
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <style>
-      body {
-        position: relative; /* 將body元素設定為相對定位，讓::before偽元素能夠正確定位 */
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-      }
-    </style>
 
-    <script>
-      window.addEventListener("DOMContentLoaded", function () {
-        var backgroundImages = [
-          "images/otters/otter-cat-1.gif",
-          "images/otters/otter-cat-2.gif",
-          "images/otters/otter-cat-3.gif",
-          "images/otters/otter-cat-4.gif",
-        ];
-
-        var randomIndex = Math.floor(Math.random() * backgroundImages.length);
-        var selectedImage = backgroundImages[randomIndex];
-
-        document.body.style.backgroundImage = "url(" + selectedImage + ")";
-      });
-    </script>
-  </head>
-
-  <body>
-    <!-- Primary Page Layout
+        <!-- Background Image
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <div class="container">
-      <div class="row">
-        <div class="column" style="margin-top: 10%">
-          <!-- 
+        <style>
+            body {
+                position: relative; /* 將body元素設定為相對定位，讓::before偽元素能夠正確定位 */
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center;
+            }
+        </style>
+
+        <script>
+            window.addEventListener("DOMContentLoaded", function () {
+                var backgroundImages = [
+                    "images/otters/otter-cat-1.gif",
+                    "images/otters/otter-cat-2.gif",
+                    "images/otters/otter-cat-3.gif",
+                    "images/otters/otter-cat-4.gif",
+                ];
+
+                var randomIndex = Math.floor(
+                    Math.random() * backgroundImages.length
+                );
+                var selectedImage = backgroundImages[randomIndex];
+
+                document.body.style.backgroundImage =
+                    "url(" + selectedImage + ")";
+            });
+        </script>
+    </head>
+
+    <body>
+        <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        <div class="container">
+            <div class="row">
+                <div class="column" style="margin-top: 10%">
+                    <!-- 
 
           ## Getting Started with LittleLink
 
@@ -118,31 +121,31 @@
 
         -->
 
-          <!-- Your Image Here -->
-          <img
-            src="images/wei/wei.jpg"
-            class="avatar"
-            srcset="images/wei/wei.jpg"
-            alt=""
-          />
+                    <!-- Your Image Here -->
+                    <img
+                        src="images/wei/wei.jpg"
+                        class="avatar"
+                        srcset="images/wei/wei.jpg"
+                        alt=""
+                    />
 
-          <!-- Title -->
-          <h1 role="heading">林奇葦</h1>
+                    <!-- Title -->
+                    <h1 role="heading">林奇葦</h1>
 
-          <!-- Short Bio -->
-          <p>
-            總是想成為擁有
-            <a
-              href="https://tsais.pw/"
-              target="_blank"
-              rel="noopener"
-              role="link"
-              >水獺</a
-            >
-            的富翁.
-          </p>
+                    <!-- Short Bio -->
+                    <p>
+                        總是想成為擁有
+                        <a
+                            href="https://tsais.pw/"
+                            target="_blank"
+                            rel="noopener"
+                            role="link"
+                            >水獺</a
+                        >
+                        的富翁.
+                    </p>
 
-          <!--
+                    <!--
 
           ## Breaking down <a> attributes:
           
@@ -171,147 +174,189 @@
 
         -->
 
-          <!-- Generic Homepage -->
-          <a
-            class="button button-default"
-            href="https://7wei.xyz/home"
-            target="_blank"
-            rel="noopener"
-            role="button"
-            ><img
-              class="icon"
-              src="images/icons/generic-homepage.svg"
-              alt=""
-            />Homepage</a
-          ><br />
+                    <!-- Generic Homepage -->
+                    <a
+                        class="button button-default"
+                        href="https://7wei.xyz/home"
+                        target="_blank"
+                        rel="noopener"
+                        role="button"
+                        ><img
+                            class="icon"
+                            src="images/icons/generic-homepage.svg"
+                            alt=""
+                        />Homepage</a
+                    ><br />
 
-          <!-- Facebook -->
-          <a
-            class="button button-faceb"
-            href="https://7wei.xyz/fb"
-            target="_blank"
-            rel="noopener"
-            role="button"
-            ><img
-              class="icon"
-              src="images/icons/facebook.svg"
-              alt=""
-            />Facebook</a
-          ><br />
+                    <!-- Generic Calendar -->
+                    <a
+                        class="button button-default"
+                        href="https://7wei.xyz/book"
+                        target="_blank"
+                        rel="noopener"
+                        role="button"
+                        ><img
+                            class="icon"
+                            aria-hidden="true"
+                            src="images/icons/generic-calendar.svg"
+                            alt="Calendar Icon"
+                        />Appointment</a
+                    ><br />
 
-          <!-- Instagram -->
-          <a
-            class="button button-instagram"
-            href="https://7wei.xyz/ig"
-            target="_blank"
-            rel="noopener"
-            role="button"
-            ><img
-              class="icon"
-              src="images/icons/instagram.svg"
-              alt=""
-            />Instagram</a
-          ><br />
+                    <!-- Facebook -->
+                    <a
+                        class="button button-faceb"
+                        href="https://7wei.xyz/fb"
+                        target="_blank"
+                        rel="noopener"
+                        role="button"
+                        ><img
+                            class="icon"
+                            src="images/icons/facebook.svg"
+                            alt=""
+                        />Facebook</a
+                    ><br />
 
-          <!-- LinkedIn -->
-          <a
-            class="button button-linked"
-            href="https://7wei.xyz/in"
-            target="_blank"
-            rel="noopener"
-            role="button"
-            ><img
-              class="icon"
-              src="images/icons/linkedin.svg"
-              alt=""
-            />LinkedIn</a
-          ><br />
+                    <!-- Instagram -->
+                    <a
+                        class="button button-instagram"
+                        href="https://7wei.xyz/ig"
+                        target="_blank"
+                        rel="noopener"
+                        role="button"
+                        ><img
+                            class="icon"
+                            src="images/icons/instagram.svg"
+                            alt=""
+                        />Instagram</a
+                    ><br />
 
-          <!-- Line -->
-          <a
-            class="button button-line"
-            href="https://7wei.xyz/line"
-            target="_blank"
-            rel="noopener"
-            role="button"
-            ><img class="icon" src="images/icons/line.svg" alt="" />Line</a
-          ><br />
+                    <!-- LinkedIn -->
+                    <a
+                        class="button button-linked"
+                        href="https://7wei.xyz/in"
+                        target="_blank"
+                        rel="noopener"
+                        role="button"
+                        ><img
+                            class="icon"
+                            src="images/icons/linkedin.svg"
+                            alt=""
+                        />LinkedIn</a
+                    ><br />
 
-          <!-- Telegram -->
-          <a
-            class="button button-telegram"
-            href="https://7wei.xyz/tg"
-            target="_blank"
-            rel="noopener"
-            role="button"
-            ><img
-              class="icon"
-              src="images/icons/telegram.svg"
-              alt=""
-            />Telegram</a
-          ><br />
+                    <!-- Line -->
+                    <a
+                        class="button button-line"
+                        href="https://7wei.xyz/line"
+                        target="_blank"
+                        rel="noopener"
+                        role="button"
+                        ><img
+                            class="icon"
+                            src="images/icons/line.svg"
+                            alt=""
+                        />Line</a
+                    ><br />
 
-          <!-- Discord -->
-          <a
-            class="button button-discord"
-            href="https://7wei.xyz/dc"
-            target="_blank"
-            rel="noopener"
-            role="button"
-            ><img
-              class="icon"
-              src="images/icons/discord.svg"
-              alt=""
-            />Discord</a
-          ><br />
+                    <!-- Telegram -->
+                    <a
+                        class="button button-telegram"
+                        href="https://7wei.xyz/tg"
+                        target="_blank"
+                        rel="noopener"
+                        role="button"
+                        ><img
+                            class="icon"
+                            src="images/icons/telegram.svg"
+                            alt=""
+                        />Telegram</a
+                    ><br />
 
-          <!-- Steam -->
-          <a
-            class="button button-steam"
-            href="https://7wei.xyz/steam"
-            target="_blank"
-            rel="noopener"
-            role="button"
-            ><img class="icon" src="images/icons/steam.svg" alt="" />Steam</a
-          ><br />
+                    <!-- Discord -->
+                    <a
+                        class="button button-discord"
+                        href="https://7wei.xyz/dc"
+                        target="_blank"
+                        rel="noopener"
+                        role="button"
+                        ><img
+                            class="icon"
+                            src="images/icons/discord.svg"
+                            alt=""
+                        />Discord</a
+                    ><br />
 
-          <!-- GitHub -->
-          <a
-            class="button button-github"
-            href="https://7wei.xyz/gh"
-            target="_blank"
-            rel="noopener"
-            role="button"
-            ><img class="icon" src="images/icons/github.svg" alt="" />GitHub</a
-          ><br />
+                    <!-- Steam -->
+                    <a
+                        class="button button-steam"
+                        href="https://7wei.xyz/steam"
+                        target="_blank"
+                        rel="noopener"
+                        role="button"
+                        ><img
+                            class="icon"
+                            src="images/icons/steam.svg"
+                            alt=""
+                        />Steam</a
+                    ><br />
 
-          <!-- Generic Email -->
-          <a
-            class="button button-default"
-            href="mailto:kiwi072400.lin@gmail.com"
-            target="_blank"
-            rel="noopener"
-            role="button"
-            ><img
-              class="icon"
-              src="images/icons/generic-email.svg"
-              alt=""
-            />kiwi072400.lin@gmail.com</a
-          ><br />
+                    <!-- GitHub -->
+                    <a
+                        class="button button-github"
+                        href="https://7wei.xyz/gh"
+                        target="_blank"
+                        rel="noopener"
+                        role="button"
+                        ><img
+                            class="icon"
+                            src="images/icons/github.svg"
+                            alt=""
+                        />GitHub</a
+                    ><br />
 
-          <br />
-          <!-- 
+                    <!-- Read.cv -->
+                    <a
+                        class="button button-read-cv"
+                        href="https://7wei.xyz/cv"
+                        target="_blank"
+                        rel="noopener"
+                        role="button"
+                        ><img
+                            class="icon"
+                            aria-hidden="true"
+                            src="images/icons/read-cv.svg"
+                            alt="Read.cv logo"
+                        />Resume</a
+                    ><br />
+
+                    <!-- Generic Email -->
+                    <a
+                        class="button button-default"
+                        href="mailto:kiwi072400.lin@gmail.com"
+                        target="_blank"
+                        rel="noopener"
+                        role="button"
+                        ><img
+                            class="icon"
+                            src="images/icons/generic-email.svg"
+                            alt=""
+                        />kiwi072400.lin@gmail.com</a
+                    ><br />
+
+                    <br />
+                    <!-- 
             Footer:
             This includes a link to privacy.html page which can be setup for your Privacy Policy.
             This also includes a link to the LittleLink repository to make forking LittleLink easier.
             You can edit or remove anything here to make your own footer.
         -->
-          <p>Copyright 2023 © Wei.</p>
+                    <p>Copyright 2023 © Wei.</p>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
 
-    <!-- End Document
+        <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  </body>
+    </body>
 </html>
